--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
             </div>
 
             <ul class="nav">
+                <a><li>About Us</li></a>
                 <a><li>Pricing</li></a>
                 <a><li>Booking</li></a>
+
             </ul>
         </div>
         
@@ -36,7 +38,28 @@
             illo autem sed eum ipsam reiciendis unde. Rem quae quod totam inventore, laboriosam harum laudantium quibusdam in omnis placeat odio quasi,
             assumenda vitae doloremque amet, nobis perspiciatis aliquid pariatur suscipit dolores iusto illo et ad! Perspiciatis accusamus iste rem omnis 
             totam, animi est accusantium qui laboriosam molestiae rerum debitis dicta a.
+            
+            <br>
+            <br>
+            <br>    
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed atque ipsam possimus in vero quisquam reprehenderit quia voluptate natus maxime, 
+                dolorem aspernatur facilis voluptates dolores asperiores perferendis, suscipit cumque. Nulla ex, pariatur sed ab ipsam deserunt non odit praesentium
+                iure excepturi fugiat et quod consequatur at eius. Debitis ut dolores illum dicta consequuntur. Minima eligendi earum repellat officiis iste eos quasi 
+                quidem iusto recusandae amet, officia voluptas impedit veritatis ipsa fuga aut laudantium facilis eveniet nam ex doloremque. Blanditiis odio itaque rem 
+                facilis quibusdam iusto quod repellat ipsam quisquam nisi quasi ipsum cum quidem officia similique, accusamus nulla vero, facere cupiditate nam a quas! 
+                 Reprehenderit illum porro quibusdam voluptatibus corrupti aliquid neque facere esse odio maxime sequi obcaecati nam hic, harum, explicabo nemo est atque
+                suscipit, maiores sed dolor. Maxime, voluptatem corrupti nihil sed ratione ad tempora eligendi eveniet quam deserunt necessitatibus velit harum voluptatibus 
+                voluptas ut reprehenderit quisquam expedita veritatis tempore? Vel quisquam nam obcaecati soluta possimus, dolorum in iure sunt expedita qui velit doloribus
+                dolores suscipit non ullam cupiditate minus voluptas fugiat impedit ipsa molestias inventore nemo dolorem iste. Perferendis laborum tempore error, 
+                earum fuga, corporis nam ad ipsa, cupiditate repudiandae perspiciatis repellendus eius velit nesciunt. Neque minus debitis expedita reprehenderit? 
+                Explicabo, fuga illo! Eligendi fuga ipsa fugiat minima, ad porro, iure veniam tenetur ratione itaque similique voluptatem dolorem. Repudiandae ipsum 
+                eaque ab, quae accusantium, iure aliquam reiciendis nihil iusto sapiente nostrum qui at perferendis reprehenderit illo nulla excepturi commodi, 
+                magnam deleniti delectus nemo modi mollitia? Perferendis magnam iste molestias voluptatibus nulla veritatis iusto sint beatae, itaque aliquam, hic 
+                temporibus nemo, labore praesentium voluptate facere corrupti. Eligendi, nulla commodi tempore ipsum sit dicta debitis deleniti perferendis ipsam,
+                maxime labore consequuntur non. Repellat, deserunt ipsum veritatis vero ducimus odit voluptatem nihil. Dicta mollitia consequuntur facere ducimus sunt 
+                laboriosam magni?
             </p>
+
         </div>
         <div class="bussinessPhotos">
             <img src="Images/photo 1.jpg" width="300px" height="300px">
@@ -51,8 +74,8 @@
     <h3>Find Us</h3>
         <nav class="Social">
             <ol>
-        <li class="links3"> <img src="Images/facebook.png" width="100px" height="100px"></li>
-        <li class="links4"> <img src="Images/Instagram.png" width="100px" height="100px"></Li>
+        <li class="links3"> <img src="Images/facebook-logo.png" width="100px" height="100px"></li>
+        <li class="links4"> <img src="Images/glyph-logo_May2016.png" width="100px" height="100px"></Li>
         </ol>
     </nav>
 </footer>
