--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         
     </div>      
 
+    <img class="top-wallpaper" src="Images/Wallpaper.jpeg">
+
     <div class="wrapper">
         <div class="homeText">
            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis autem quo, quia vero provident repudiandae dolorum molestiae 
