--- a/index.html
+++ b/index.html
@@ -4,28 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Alata&family=PT+Sans&family=Raleway:ital,wght@1,300&display=swap" rel="stylesheet">    <title>Document</title>
 </head>
 <body>
-    <div class="header">
-        <div class="inner_header">
-            <img class="logo" src="Images/logo.jpg" width="85px" height="100px">
-            <div class="logo_container"> 
-                <h1>Barber<span>Shop</span></h1>
+    <div class="header-wrapper">
+        <div class="header">
+            <div class="logo">
+                <img class="logo-image" src="Images/logo.jpg" width="85px" height="100px">
+                    <h1>Barber<span>Shop</span></h1>
             </div>
-
-            <ul class="nav">
-                <a><li>About Us</li></a>
-                <a><li>Pricing</li></a>
-                <a><li>Booking</li></a>
-
-            </ul>
-        </div>
         
-    </div>      
+                <div class="div">
+                    <nav class="nav">
+                        <a><li>About Us</li></a>
+                        <a><li>Pricing</li></a>
+                        <a><li>Booking</li></a>
+                    </nav>
+                </div>
+        </div>  
+        
+        <div class="main-text">
+            <h1>Professional.</h1>
+            <h1>Precision.</h1>
+            <h1> Perfect.</h1>
+            <p>Your personal barber in the streets of Sydney</p>
+        </div>
+    </div> 
 
-    <img class="top-wallpaper" src="Images/Wallpaper.jpeg">
+
 
     <div class="wrapper">
         <div class="homeText">
