--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Alata&family=PT+Sans&family=Raleway:ital,wght@1,300&display=swap" rel="stylesheet">    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Alata&family=PT+Sans&family=Raleway:ital,wght@1,300&display=swap" rel="stylesheet">    <title>BarberShop</title>
 </head>
 <body>
     <div class="header-wrapper">
@@ -34,48 +34,57 @@
 
 
     <div class="wrapper">
-        <div class="homeText">
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis autem quo, quia vero provident repudiandae dolorum molestiae 
-                labore ipsam in similique earumfwf. Nisi consectetur minima eligendi doloremque voluptate, quia ipsa dignissimos facere vitae, ratione
-                recusandae aspernatur hic rem ut fugit dolorum sunt corrupti sint laborum quas dicta eos velit. At, fugit, vitae provident ab blanditiis
-                rerum alias debitis voluptates, tempore similique distinctio? Ex eos architecto cumque culpa, ad mollitia autem quae ut. Eos provident 
-                molestias aliquid consequatur animi dignissimos, architecto nulla reprehenderit quod dolores cum error, similique eum odio, repellendus ab at.
-                Consequatur totam nam numquam ipsam sint facere dolore, nemo vero doloribus laudantium natus reprehenderit repudiandae quaerat sequi nobis
-                amet sed eius pariatur illo vitae. Nihil fugiat eaque modi ipsa fugit, culpa fuga veritatis consequatur magnam corrupti asperiores eveniet 
-                velit, minus corporis molestiae beatae quo dolor et voluptatibus laboriosam provident. Consectetur adipisci ea culpa officiis, odit, ex voluptas 
-                illo autem sed eum ipsam reiciendis unde. Rem quae quod totam inventore, laboriosam harum laudantium quibusdam in omnis placeat odio quasi,
-                assumenda vitae doloremque amet, nobis perspiciatis aliquid pariatur suscipit dolores iusto illo et ad! Perspiciatis accusamus iste rem omnis 
-                totam, animi est accusantium qui laboriosam molestiae rerum debitis dicta a.
-            
+        <div class="container-1">
+            <div class="homeText-1">
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis autem quo, quia vero provident repudiandae dolorum molestiae 
+                    labore ipsam in similique earumfwf. Nisi consectetur minima eligendi doloremque voluptate, quia ipsa dignissimos facere vitae, ratione
+                    recusandae aspernatur hic rem ut fugit dolorum sunt corrupti sint laborum quas dicta eos velit. At, fugit, vitae provident ab blanditiis
+                    rerum alias debitis voluptates, tempore similique distinctio? Ex eos architecto cumque culpa, ad mollitia autem quae ut. Eos provident 
+                    molestias aliquid consequatur animi dignissimos, architecto nulla reprehenderit quod dolores cum error, similique eum odio, repellendus ab at.
+                    Consequatur totam nam numquam ipsam sint facere dolore, nemo vero doloribus laudantium natus reprehenderit repudiandae quaerat sequi nobis
+                    amet sed eius pariatur illo vitae. Nihil fugiat eaque modi ipsa fugit, culpa fuga veritatis consequatur magnam corrupti asperiores eveniet 
+                    velit, minus corporis molestiae beatae quo dolor et voluptatibus laboriosam provident. Consectetur adipisci ea culpa officiis, odit, ex voluptas 
+                    illo autem sed eum ipsam reiciendis unde. Rem quae quod totam inventore, laboriosam harum laudantium quibusdam in omnis placeat odio quasi,
+                    assumenda vitae doloremque amet, nobis perspiciatis aliquid pariatur suscipit dolores iusto illo et ad! Perspiciatis accusamus iste rem omnis 
+                    totam, animi est accusantium qui laboriosam molestiae rerum debitis dicta a.
+                </p>
+            </div>
+        </div>
+
             <br>
             <br>
             <br>    
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed atque ipsam possimus in vero quisquam reprehenderit quia voluptate natus maxime, 
-                dolorem aspernatur facilis voluptates dolores asperiores perferendis, suscipit cumque. Nulla ex, pariatur sed ab ipsam deserunt non odit praesentium
-                iure excepturi fugiat et quod consequatur at eius. Debitis ut dolores illum dicta consequuntur. Minima eligendi earum repellat officiis iste eos quasi 
-                quidem iusto recusandae amet, officia voluptas impedit veritatis ipsa fuga aut laudantium facilis eveniet nam ex doloremque. Blanditiis odio itaque rem 
-                facilis quibusdam iusto quod repellat ipsam quisquam nisi quasi ipsum cum quidem officia similique, accusamus nulla vero, facere cupiditate nam a quas! 
-                    Reprehenderit illum porro quibusdam voluptatibus corrupti aliquid neque facere esse odio maxime sequi obcaecati nam hic, harum, explicabo nemo est atque
-                suscipit, maiores sed dolor. Maxime, voluptatem corrupti nihil sed ratione ad tempora eligendi eveniet quam deserunt necessitatibus velit harum voluptatibus 
-                voluptas ut reprehenderit quisquam expedita veritatis tempore? Vel quisquam nam obcaecati soluta possimus, dolorum in iure sunt expedita qui velit doloribus
-                dolores suscipit non ullam cupiditate minus voluptas fugiat impedit ipsa molestias inventore nemo dolorem iste. Perferendis laborum tempore error, 
-                earum fuga, corporis nam ad ipsa, cupiditate repudiandae perspiciatis repellendus eius velit nesciunt. Neque minus debitis expedita reprehenderit? 
-                Explicabo, fuga illo! Eligendi fuga ipsa fugiat minima, ad porro, iure veniam tenetur ratione itaque similique voluptatem dolorem. Repudiandae ipsum 
-                eaque ab, quae accusantium, iure aliquam reiciendis nihil iusto sapiente nostrum qui at perferendis reprehenderit illo nulla excepturi commodi, 
-                magnam deleniti delectus nemo modi mollitia? Perferendis magnam iste molestias voluptatibus nulla veritatis iusto sint beatae, itaque aliquam, hic 
-                temporibus nemo, labore praesentium voluptate facere corrupti. Eligendi, nulla commodi tempore ipsum sit dicta debitis deleniti perferendis ipsam,
-                maxime labore consequuntur non. Repellat, deserunt ipsum veritatis vero ducimus odit voluptatem nihil. Dicta mollitia consequuntur facere ducimus sunt 
-                laboriosam magni?
-            </p>
 
+        <div class="container-2">
+                <div class="homeText-2">
+                    <p> 
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed atque ipsam possimus in vero quisquam reprehenderit quia voluptate natus maxime, 
+                        dolorem aspernatur facilis voluptates dolores asperiores perferendis, suscipit cumque. Nulla ex, pariatur sed ab ipsam deserunt non odit praesentium
+                        iure excepturi fugiat et quod consequatur at eius. Debitis ut dolores illum dicta consequuntur. Minima eligendi earum repellat officiis iste eos quasi 
+                        quidem iusto recusandae amet, officia voluptas impedit veritatis ipsa fuga aut laudantium facilis eveniet nam ex doloremque. Blanditiis odio itaque rem 
+                        facilis quibusdam iusto quod repellat ipsam quisquam nisi quasi ipsum cum quidem officia similique, accusamus nulla vero, facere cupiditate nam a quas! 
+                        Reprehenderit illum porro quibusdam voluptatibus corrupti aliquid neque facere esse odio maxime sequi obcaecati nam hic, harum, explicabo nemo est atque
+                        suscipit, maiores sed dolor. Maxime, voluptatem corrupti nihil sed ratione ad tempora eligendi eveniet quam deserunt necessitatibus velit harum voluptatibus 
+                        voluptas ut reprehenderit quisquam expedita veritatis tempore? Vel quisquam nam obcaecati soluta possimus, dolorum in iure sunt expedita qui velit doloribus
+                        dolores suscipit non ullam cupiditate minus voluptas fugiat impedit ipsa molestias inventore nemo dolorem iste. Perferendis laborum tempore error, 
+                        earum fuga, corporis nam ad ipsa, cupiditate repudiandae perspiciatis repellendus eius velit nesciunt. Neque minus debitis expedita reprehenderit? 
+                        Explicabo, fuga illo! Eligendi fuga ipsa fugiat minima, ad porro, iure veniam tenetur ratione itaque similique voluptatem dolorem. Repudiandae ipsum 
+                        eaque ab, quae accusantium, iure aliquam reiciendis nihil iusto sapiente nostrum qui at perferendis reprehenderit illo nulla excepturi commodi, 
+                        magnam deleniti delectus nemo modi mollitia? Perferendis magnam iste molestias voluptatibus nulla veritatis iusto sint beatae, itaque aliquam, hic 
+                        temporibus nemo, labore praesentium voluptate facere corrupti. Eligendi, nulla commodi tempore ipsum sit dicta debitis deleniti perferendis ipsam,
+                        maxime labore consequuntur non. Repellat, deserunt ipsum veritatis vero ducimus odit voluptatem nihil. Dicta mollitia consequuntur facere ducimus sunt 
+                        laboriosam magni?
+                    </p>
+                </div>
         </div>
+    </div>
         <div class="bussinessPhotos">
             <img src="Images/photo 1.jpg" width="300px" height="300px">
             <img src="Images/photo 2.jpg" width="300px" height="300px">
             <img src="Images/photo 3.jpg" width="300px" height="300px">
             <img src="Images/Photo 4.jpg" width="300px" height="300px">
         </div>
-    </div>
+
 </body>
 
 <Footer class="section footer-section">
