--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                         <a><li>About Us</li></a>
                         <a><li>Pricing</li></a>
                         <a><li>Booking</li></a>
+                        <a><li class="links3"> <img src="Images/facebook-logo.png" width="25px" height="25px"></li></a>
+                        <a><li class="links4"> <img src="Images/glyph-logo_May2016.png" width="25px" height="25px"></Li></a>
                     </nav>
                 </div>
         </div>  
@@ -31,69 +33,50 @@
         </div>
     </div> 
 
+    <div class="middle">
+        <div class="box box1">
+            <img src="Images/main4-P.jpg" alt="" width="600px" height="800px" >
+            <div class="box1-text">
+                <h2>Professionally and industrial trained</h2>
+                <hr>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus id quasi eligendi, quaerat aliquid velit beatae magni ipsum voluptatem ex? Minima facilis dolorem unde modi hic illo quas, repudiandae autem.</p>
+                <button>Read more</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="middle-2">
+        <div class="box box2">
+            <div class="box2-text">
+                <h2>Our Products</h2>  
+                <hr>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores quos sint est maxime accusamus eum?.</p>
+                <button>Buy now</button>
+            </div>
+            <img src="Images/main3-P.jpg" alt=""  width="600px" height="800px" >
+        </div>
+    </div>
 
 
     <div class="wrapper">
-        <div class="container-1">
-            <div class="homeText-1">
-                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis autem quo, quia vero provident repudiandae dolorum molestiae 
-                    labore ipsam in similique earumfwf. Nisi consectetur minima eligendi doloremque voluptate, quia ipsa dignissimos facere vitae, ratione
-                    recusandae aspernatur hic rem ut fugit dolorum sunt corrupti sint laborum quas dicta eos velit. At, fugit, vitae provident ab blanditiis
-                    rerum alias debitis voluptates, tempore similique distinctio? Ex eos architecto cumque culpa, ad mollitia autem quae ut. Eos provident 
-                    molestias aliquid consequatur animi dignissimos, architecto nulla reprehenderit quod dolores cum error, similique eum odio, repellendus ab at.
-                    Consequatur totam nam numquam ipsam sint facere dolore, nemo vero doloribus laudantium natus reprehenderit repudiandae quaerat sequi nobis
-                    amet sed eius pariatur illo vitae. Nihil fugiat eaque modi ipsa fugit, culpa fuga veritatis consequatur magnam corrupti asperiores eveniet 
-                    velit, minus corporis molestiae beatae quo dolor et voluptatibus laboriosam provident. Consectetur adipisci ea culpa officiis, odit, ex voluptas 
-                    illo autem sed eum ipsam reiciendis unde. Rem quae quod totam inventore, laboriosam harum laudantium quibusdam in omnis placeat odio quasi,
-                    assumenda vitae doloremque amet, nobis perspiciatis aliquid pariatur suscipit dolores iusto illo et ad! Perspiciatis accusamus iste rem omnis 
-                    totam, animi est accusantium qui laboriosam molestiae rerum debitis dicta a.
-                </p>
-            </div>
+     
+        <div class="footer-wrapper">
+            
+            <a href="">About Us</a>
+            <a href="">Our Story</a>
+            <a href="">Corporate responsibility</a>
+            <a href="">Gallery</a>
+            <a href="">Our team</a>
+            <a href="">Find us</a>
+            <a href="">Careers</a>
         </div>
-
-            <br>
-            <br>
-            <br>    
-
-        <div class="container-2">
-                <div class="homeText-2">
-                    <p> 
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed atque ipsam possimus in vero quisquam reprehenderit quia voluptate natus maxime, 
-                        dolorem aspernatur facilis voluptates dolores asperiores perferendis, suscipit cumque. Nulla ex, pariatur sed ab ipsam deserunt non odit praesentium
-                        iure excepturi fugiat et quod consequatur at eius. Debitis ut dolores illum dicta consequuntur. Minima eligendi earum repellat officiis iste eos quasi 
-                        quidem iusto recusandae amet, officia voluptas impedit veritatis ipsa fuga aut laudantium facilis eveniet nam ex doloremque. Blanditiis odio itaque rem 
-                        facilis quibusdam iusto quod repellat ipsam quisquam nisi quasi ipsum cum quidem officia similique, accusamus nulla vero, facere cupiditate nam a quas! 
-                        Reprehenderit illum porro quibusdam voluptatibus corrupti aliquid neque facere esse odio maxime sequi obcaecati nam hic, harum, explicabo nemo est atque
-                        suscipit, maiores sed dolor. Maxime, voluptatem corrupti nihil sed ratione ad tempora eligendi eveniet quam deserunt necessitatibus velit harum voluptatibus 
-                        voluptas ut reprehenderit quisquam expedita veritatis tempore? Vel quisquam nam obcaecati soluta possimus, dolorum in iure sunt expedita qui velit doloribus
-                        dolores suscipit non ullam cupiditate minus voluptas fugiat impedit ipsa molestias inventore nemo dolorem iste. Perferendis laborum tempore error, 
-                        earum fuga, corporis nam ad ipsa, cupiditate repudiandae perspiciatis repellendus eius velit nesciunt. Neque minus debitis expedita reprehenderit? 
-                        Explicabo, fuga illo! Eligendi fuga ipsa fugiat minima, ad porro, iure veniam tenetur ratione itaque similique voluptatem dolorem. Repudiandae ipsum 
-                        eaque ab, quae accusantium, iure aliquam reiciendis nihil iusto sapiente nostrum qui at perferendis reprehenderit illo nulla excepturi commodi, 
-                        magnam deleniti delectus nemo modi mollitia? Perferendis magnam iste molestias voluptatibus nulla veritatis iusto sint beatae, itaque aliquam, hic 
-                        temporibus nemo, labore praesentium voluptate facere corrupti. Eligendi, nulla commodi tempore ipsum sit dicta debitis deleniti perferendis ipsam,
-                        maxime labore consequuntur non. Repellat, deserunt ipsum veritatis vero ducimus odit voluptatem nihil. Dicta mollitia consequuntur facere ducimus sunt 
-                        laboriosam magni?
-                    </p>
-                </div>
-        </div>
+        <p class="copyRight"> Vela Web Design, &copy; 2020.</p>
     </div>
-        <div class="bussinessPhotos">
-            <img src="Images/photo 1.jpg" width="300px" height="300px">
-            <img src="Images/photo 2.jpg" width="300px" height="300px">
-            <img src="Images/photo 3.jpg" width="300px" height="300px">
-            <img src="Images/Photo 4.jpg" width="300px" height="300px">
-        </div>
+
+
+
 
 </body>
 
-<Footer class="section footer-section">
-    <h3>Find Us</h3>
-        <nav class="Social">
-            <ol>
-        <li class="links3"> <img src="Images/facebook-logo.png" width="100px" height="100px"></li>
-        <li class="links4"> <img src="Images/glyph-logo_May2016.png" width="100px" height="100px"></Li>
-        </ol>
-    </nav>
 </footer>
 </html>
